# AdventOfCode

./: .gitignore
2022/Day1/: part1.py  part2.py  solution.c  solution.py
2022/Day10/: solution.py
2022/Day11/: solution.py
2022/Day12/: solution.py
2022/Day13/: solution.py
2022/Day14/: solution.py
2022/Day15/: solution.py
2022/Day16/: solution.py
2022/Day17/: solution.py
2022/Day18/: solution.py
2022/Day19/: solution.py
2022/Day2/: solution.c  solution.py
2022/Day20/: solution.py
2022/Day3/: solution.c  solution.py
2022/Day4/: solution.c  solution.py
2022/Day5/: solution.c  solution.py
2022/Day6/: solution.c  solution.py
2022/Day7/: solution.py
2022/Day8/: solution.py
2022/Day9/: solution.py
aoc2023/: Cargo.toml
aoc2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  lib.rs  main.rs
aoc2024/: Cargo.toml
aoc2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24-mermaid-template.html  day24.rs  day25.rs  lib.rs  main.rs
aoc2025/: Cargo.toml
aoc2025/benches/: benchmark.rs
aoc2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs  main.rs
utils-rust/: Cargo.toml
utils-rust/src/: lib.rs  narray.rs  nk_bits.rs  numbers.rs  parse.rs  solution.rs  union_find.rs
