[package]
name = "aoc2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

external-solver = ["z3"]

[dependencies]
utils-rust = { path = "../utils-rust" }
itertools = "0.14.0"
regex = "1.11.1"
z3 = { version = "0.19.6", optional = true }

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "benchmark"
harness = false
